<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChildApp</string>
    <string name="action_settings">Settings</string>
    <string name="buttonPlay">Play</string>
    <string name="option">Option</string>
    <string name="scores">Scores</string>
    <string name="title_activity_second">ChildApp</string>
    <string name="game">GAMES</string>
    <string name="catgories">CATEGORIES</string>
    <string name="questions">Questions</string>
    <string name="catchcatch">Catch Catch</string>
    <string name="title_activity_chosse_question">ChildApp</string>
    <string name="back">Back</string>
    <string name="type">Type of Questions</string>
    <string name="letters">Letters</string>
    <string name="colors">Colors</string>
    <string name="animals">Animals</string>
    <string name="numbers">Numbers</string>
    <string name="title_activity_questions">ChildApp</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="title_activity_catch_catch">ChildApp</string>
    <string name="correct_title">CORRECT!</string>
    <string name="fail_title">FAIL!</string>
    <string name="accept_button">Accept</string>
    <string name="score">Score:</string>
    <string name="congratulations">Congratulations!\nYour Score is</string>
    <string name="catchcatchtitle">Catch the flying animal!</string>
    <string name="level">Level</string>
    <string name="title_activity_settings">ChildApp</string>
    <string name="title_activity_high_score">ChildApp</string>
    <string name="highScores">&quot; High Scores&quot;</string>
    <string name="points">Points</string>
    <string name="SoundControl">Volume</string>
    <string name="Languages">Languages</string>
    <string name="enteryourname">Enter your name</string>
    <string name="name">Name</string>
    <string name="aboutustitle">About us</string>
    <string name="aboutus">App created by three students from the University of Oviedo for the subject "Software for Mobile Devices".\n\nAitor Baragaño Fernández\nAntonio Cueva Fernández\nMarcin Radecki</string>
    <string name="help">Help</string>
    <string name="HelpContFirst">Click Play to start!\nIf you want to see your score, click on the Trophy.\nIf you want to change languages ​​or adjust the volume, tap settings.</string>
    <string name="HelpContSecond">Select the game you want to play.\nIf you fancy a challenge, press Questions.\nIf what you like is to catch your favorite animals, press Catch Catch.</string>
    <string name="HelpContCategories">Select the category that you like and answer the questions.\nForward to the challenge!</string>
    <string name="HelpContQuestions">Click the answer you think is correct of the three proposals.\nIf you choose the correct answer to the first you will get 3 points. If it is to the second would be 2. On the third try you can only get one point. If you are not successful in three attempts, luck with the next question.\nAt the end of the game your score is displayed and recorded with your name.</string>
    <string name="HelpContCatchCatch">Catch the animals!\nThis game contains 5 levels, in each level you have to catch the animal that corresponds but beware because it is the highest level will be more animals to confuse you. If you catch the right animal will add one point to your score, but if it is not the correct one point was subtracted.\nAt the end of the game your score is displayed and recorded with your name.</string>
    <string name="camelCatch">Catch the camel!</string>
    <string name="catCatch">Catch the cat!</string>
    <string name="cowCatch">Catch the cow!</string>
    <string name="crocodileCatch">Catch the crocodile!</string>
    <string name="dogCatch">Catch the dog!</string>
    <string name="donkeyCatch">Catch the donkey!</string>
    <string name="elephantCatch">Catch the elephant!</string>
    <string name="giraffeCatch">Catch the giraffe!</string>
    <string name="goatCatch">Catch the goat!</string>
    <string name="hippoCatch">Catch the hippo!</string>
    <string name="lionCatch">Catch the lion!</string>
    <string name="monkeyCatch">Catch the monkey!</string>
    <string name="mouseCatch">Catch the mouse!</string>
    <string name="pigCatch">Catch the pig!</string>
    <string name="rabbitCatch">Catch the rabbit!</string>
    <string name="rhinoCatch">Catch the rhino!</string>
    <string name="sheepCatch">Catch the sheep!</string>
    <string name="tortoiseCatch">Catch the tortoise!</string>
    <string name="camelQuestion">What is the camel?</string>
    <string name="catQuestion">What is the cat?</string>
    <string name="cowQuestion">What is the cow?</string>
    <string name="crocodileQuestion">What is the crocodile?</string>
    <string name="dogQuestion">What is the dog?</string>
    <string name="donkeyQuestion">What is the donkey?</string>
    <string name="elephantQuestion">What is the elephant?</string>
    <string name="giraffeQuestion">What is the giraffe?</string>
    <string name="goatQuestion">What is the goat?</string>
    <string name="hippoQuestion">What is the hippo?</string>
    <string name="lionQuestion">What is the lion?</string>
    <string name="monkeyQuestion">What is the monkey?</string>
    <string name="mouseQuestion">What is the mouse?</string>
    <string name="pigQuestion">What is the pig?</string>
    <string name="rabbitQuestion">What is the rabbit?</string>
    <string name="rhinoQuestion">What is the rhino?</string>
    <string name="sheepQuestion">What is the sheep?</string>
    <string name="tortoiseQuestion">What is the tortoise?</string>
    <string name="zeroQuestion">Which number is zero?</string>
    <string name="oneQuestion">Which number is one?</string>
    <string name="twoQuestion">Which number is two?</string>
    <string name="threeQuestion">Which number is three?</string>
    <string name="fourQuestion">Which number is four?</string>
    <string name="fiveQuestion">Which number is five?</string>
    <string name="sixQuestion">Which number is six?</string>
    <string name="sevenQuestion">Which number is seven?</string>
    <string name="eightQuestion">Which number is eight?</string>
    <string name="nineQuestion">Which number is nine?</string>
    <string name="blackQuestion">Which color is black?</string>
    <string name="blueQuestion">Which color is blue?</string>
    <string name="brownQuestion">Which color is brown?</string>
    <string name="grayQuestion">Which color is gray?</string>
    <string name="greenQuestion">Which color is green?</string>
    <string name="orangeQuestion">Which color is orange?</string>
    <string name="pinkQuestion">Which color is pink?</string>
    <string name="purpleQuestion">Which color is purple?</string>
    <string name="redQuestion">Which color is red?</string>
    <string name="whiteQuestion">Which color is white?</string>
    <string name="yellowQuestion">Which color is yellow?</string>
    <string name="aQuestion">Which letter is a?</string>
    <string name="bQuestion">Which letter is b?</string>
    <string name="cQuestion">Which letter is c?</string>
    <string name="dQuestion">Which letter is d?</string>
    <string name="eQuestion">Which letter is e?</string>
    <string name="fQuestion">Which letter is f?</string>
    <string name="gQuestion">Which letter is g?</string>
    <string name="hQuestion">Which letter is h?</string>
    <string name="iQuestion">Which letter is i?</string>
    <string name="jQuestion">Which letter is j?</string>
    <string name="kQuestion">Which letter is k?</string>
    <string name="lQuestion">Which letter is l?</string>
    <string name="mQuestion">Which letter is m?</string>
    <string name="nQuestion">Which letter is n?</string>
    <string name="oQuestion">Which letter is o?</string>
    <string name="pQuestion">Which letter is p?</string>
    <string name="qQuestion">Which letter is q?</string>
    <string name="rQuestion">Which letter is r?</string>
    <string name="sQuestion">Which letter is s?</string>
    <string name="tQuestion">Which letter is t?</string>
    <string name="uQuestion">Which letter is u?</string>
    <string name="vQuestion">Which letter is v?</string>
    <string name="wQuestion">Which letter is w?</string>
    <string name="xQuestion">Which letter is x?</string>
    <string name="yQuestion">Which letter is y?</string>
    <string name="zQuestion">Which letter is z?</string>
    <string name="letterQuestion">Which letter is ...?</string>
    <string name="camel">camel</string>
    <string name="cat">cat</string>
    <string name="cow">cow</string>
    <string name="crocodile">crocodile</string>
    <string name="dog">dog</string>
    <string name="donkey">donkey</string>
    <string name="elephant">elephant</string>
    <string name="giraffe">giraffe</string>
    <string name="goat">goat</string>
    <string name="hippo">hippo</string>
    <string name="lion">lion</string>
    <string name="monkey">monkey</string>
    <string name="mouse">mouse</string>
    <string name="pig">pig</string>
    <string name="rabbit">rabbit</string>
    <string name="rhino">rhino</string>
    <string name="sheep">sheep</string>
    <string name="tortoise">tortoise</string>
    <string name="zero">zero</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="black">black</string>
    <string name="blue">blue</string>
    <string name="brown">brown</string>
    <string name="gray">gray</string>
    <string name="green">green</string>
    <string name="orange">orange</string>
    <string name="pink">pink</string>
    <string name="purple">purple</string>
    <string name="red">red</string>
    <string name="white">white</string>
    <string name="yellow">yellow</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    
</resources>
