<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChosseQuestionActivity" >

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/letters" />

    <Button
        android:id="@+id/buttonColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonLetters"
        android:layout_below="@+id/buttonLetters"
        android:text="@string/colors" />

    <Button
        android:id="@+id/buttonAnimals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonColors"
        android:layout_below="@+id/buttonColors"
        android:text="@string/animals" />

    <Button
        android:id="@+id/buttonNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonAnimals"
        android:layout_below="@+id/buttonAnimals"
        android:text="@string/numbers" />

</RelativeLayout>
